--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.3",
     "ms": "^2.1.3",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "slugify": "^1.6.6",
     "winston": "^3.19.0",
     "zod": "^4.2.1"
   },
