--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/server.js",
     "db:init": "npx sequelize-cli init",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "db:seed": "npx sequelize-cli db:seed:all"
+    "db:seed": "npx sequelize-cli db:seed:all",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [
     "smartruga",
