--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "sequelize-cli": "^6.6.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
