--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:init": "npx sequelize-cli init",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:seed": "npx sequelize-cli db:seed:all",
+    "db:undo-seed": "npx sequelize-cli db:seed:undo:all",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [
