--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ms": "^2.1.3",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "qrcode": "^1.5.4",
     "sequelize": "^6.37.7",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
@@ -55,6 +56,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ms": "^2.1.0",
     "@types/node": "^25.0.3",
+    "@types/qrcode": "^1.5.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "sequelize-cli": "^6.6.3",
